# punji

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/manifest/: Cargo.toml
crates/manifest/schema/: punji.schema.json
crates/manifest/src/: app_config.rs  command.rs  convert.rs  lib.rs  package.rs  pmodule.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
schema/: punji.json
