[package]
name = "punji-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.76"
clap = "4.4.11"
clap-verbosity-flag = "2.1.1"
log = "0.4.20"
manifest = { version = "0.1.0", path = "../manifest" }
pretty_env_logger = "0.5.0"
schemars = "0.8.16"
serde_json = "1.0.108"


[[bin]]
name = "punji"
path = "src/bin/punji.rs"
doc = false
