[package]
name = "manifest"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.76"
bytesize = {version = "1.3.0", features = ["serde"]}
clap = {version = "4.4.11", features = ["derive"]}
indexmap = "2.1.0"
schemars = {version = "0.8.16", features = ["semver", "indexmap2"]}
semver = "^1.0.9"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_toml = "0.0.1"
serde_yaml = "0.9.29"
thiserror = "1.0.51"
toml = "0.8.8"
