[package]
name = "manifest"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = {workspcace = true}
bytesize = {version = "1.3.0", features = ["serde"]}
indexmap = "2.1.0"
schemars = {version = "0.8.16", features = ["semver", "indexmap2"]}
semver = {workspace = true}
serde = {workspace = true}
serde_yaml = "0.9.29"
toml = "0.8.8"
